--- a/scope-and-hoisting/index.html
+++ b/scope-and-hoisting/index.html
@@ -6,6 +6,6 @@
     <title>Scope and Hoisting</title>
   </head>
   <body>
-    <script src="./app.js"></script>
+    <script src="./shadowing.js"></script>
   </body>
 </html>
