promises => async await

--- a/asynchronous-code/index.html
+++ b/asynchronous-code/index.html
@@ -8,6 +8,6 @@
 <body>
     <button>Click me</button>
 
-    <script src="./promises.js"></script>
+    <script src="./async-await.js"></script>
 </body>
 </html>
