diving into proto

--- a/prototypes-inheritance/index.html
+++ b/prototypes-inheritance/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./oop.js"></script>
+    <script src="./prototypes.js"></script>
   </body>
 </html>
